tests/lean/prvCtor.lean.expected.out
a : Nat
prvCtor.lean:25:23-25:69: error: invalid {...} notation, constructor for `Lean.Environment` is marked as private
prvCtor.lean:27:7-27:8: error: unknown identifier 'a'
prvCtor.lean:29:25-29:27: error: overloaded, errors 
  failed to synthesize
    EmptyCollection (Name "hello")
  Additional diagnostic information may be available using the `set_option diagnostics true` command.
  
  invalid {...} notation, constructor for `Name` is marked as private
prvCtor.lean:31:25-31:34: error: invalid ⟨...⟩ notation, constructor for `Name` is marked as private
prvCtor.lean:33:25-33:40: error: unknown constant 'Name.mk'
